--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,15 @@ async-timeout==2.0.0
 beautifulsoup4==4.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
+cycler==0.10.0
 idna==2.6
+matplotlib==2.1.0
 multidict==3.3.0
+numpy==1.13.3
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
 yarl==0.13.0
